# Page_Analyzer

./: .env  .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yaml  linter.yaml  linter.yml
page_analyzer/: .env  __init__.py  app.py  db.py  html_parser.py  htmlparser.py  tools_url.py  utils.py
page_analyzer/templates/: base.html  index.html  list.html  urls.html
page_analyzer/templates/errors/: error404.html  error505.html
page_analyzer/templates/includes/: footer.html  head.html  messages.html  nav.html
page_analyzer/templates/urls/: detail.html  list.html
