[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
gunicorn = "^21.2.0"
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
