[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page analyzer"
authors = ["Denis <ad.way@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
validators = "^0.23.2"
requests = "^2.31.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
